--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,38 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [api-gateway, identity-service, media-service, post-service, search-service]
+        service: [api-gateway, identity-service, post-service, media-service, search-service]
     defaults:
       run:
-        working-directory: ${{ matrix.service }}
+        working-directory: ./${{ matrix.service }}
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Lint
-        run: |
-          if [ -f package.json ] && npm run | grep -q 'lint'; then
-            npm run lint
-          else
-            echo "No lint script, skipping."
-          fi
-
-      - name: Test
-        run: |
-          if [ -f package.json ] && npm run | grep -q 'test'; then
-            npm test
-          else
-            echo "No test script, skipping."
-          fi
-
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ matrix.service }}:latest . 
+      - name: Run tests
+        run: npm test # or: npm run build && npm test
