--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,5 +28,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test # or: npm run build && npm test
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ matrix.service }}:latest .
